deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zapgo-website
  namespace: zapgo-website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zapgo-website
    spec:
      containers:
      - image: gcr.io/zapgo-1273/zapgo-website:new
        imagePullPolicy: Always
        name: zapgo-website
        ports:
        - containerPort: 80
