service.yaml

apiVersion: v1
kind: Service
metadata:
  name: zapgo-website
  namespace: zapgo-website
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: zapgo-website
